Fix bar wiggling and jumping when dragged by text

--- a/src/gantt.scss
+++ b/src/gantt.scss
@@ -72,6 +72,7 @@ $handle-color: #ddd !default;
 		text-anchor: middle;
 		font-size: 12px;
 		font-weight: lighter;
+		pointer-events: none;
 
 		&.big {
 			fill: $text-light;
